--- a/drivers/staging/android/Kconfig
+++ b/drivers/staging/android/Kconfig
@@ -33,6 +33,12 @@ config ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES
 	  /sys/module/lowmemorykiller/parameters/adj and convert them
 	  to oom_score_adj values.
 
+config ADJ_CHAIN
+	default n
+	bool "Android Low Memory Killer: chain task adj for victim select"
+	help
+	  To chain task adj for any purpose.
+
 config ANDROID_VSOC
 	tristate "Android Virtual SoC support"
 	default n
